updated CSS, JS, and HTML files

--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
+          <textarea id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
         </div>
         <div class="card-footer">
           <button id="generateBtn" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
