--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container-fluid">
+    <main class="container-fluid">
       <nav class="row navbar navbar-expand-lg navbar-dark bg-dark">
         <header class="col-md-10 "> 
             <h1>Tremayne's Password Generator</h1>
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer class="footer">
       <div class="container-fluid">
          <div class="row text-center">
